--- a/index.html
+++ b/index.html
@@ -2,79 +2,102 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <link rel="stylesheet" href="styles.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Student schedule page</title>
-    
+    <link rel="stylesheet" href="styles.css">
+    <title>Student Schedule</title>
+    <script defer src="main.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/html2pdf.js/0.10.1/html2pdf.bundle.min.js"></script>
+
 </head>
 <body>
-    <h1>Student schedule page <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-clock" viewBox="0 0 16 16">
-  <path d="M8 3.5a.5.5 0 0 0-1 0V9a.5.5 0 0 0 .252.434l3.5 2a.5.5 0 0 0 .496-.868L8 8.71z"/>
-  <path d="M8 16A8 8 0 1 0 8 0a8 8 0 0 0 0 16m7-8A7 7 0 1 1 1 8a7 7 0 0 1 14 0"/>
-</svg></i></h1>
+
+    <header>
+        <img src="techzoneLogo.jpg" alt="techzone logo">
+        <h1>Student Schedule Page</h1>
+    </header>
+
     <main>
-        <table>
-            <thead>
-                <tr>
-                    <th></th>
-                    <th>Sunday</th>
-                    <th>Monday</th>
-                    <th>Thusday</th>
-                    <th>Wednesday</th>
-                    <th>Thursday</th>
-                </tr>
-            </thead>
-            <tbody>
-                <tr>
-                    <td class="time">8:00 AM to 9:30 AM</td>
-                    <td></td>
-                    <td class="lm">LM cour Amphie4</td>
-                    <td class="ado">ADO cour</td>
-                    <td class="lm">LM td S25</td>
-                    <td class="si">SI cour Amphie2</td>
-                </tr>
-                <tr>
-                    <td class="time">9:30 AM to 11:00 AM</td>
-                    <td></td>
-                    <td class="asd">ASD cour Amphie4</td>
-                    <td class="si">SI td S7</td>
-                    <td class="asd">ASD cour</td>
-                    <td class="ado">ADO tp labo7</td>
-                </tr>
-                <tr>
-                    <td class="time">11:00 AM to 12:30 AM</td>
-                    <td></td>
-                    <td class="si">SI tp labo15</td>
-                    <td></td>
-                    <td class="si">ASD td</td>
-                    <td class="tg">TG td</td>
-                </tr>
-                <tr>
-                    <td class="time">12:30 AM to 2:00 PM</td>
-                    <td class="ado">ADO td S7</td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                </tr>
-                <tr>
-                    <td class="time">2:00 PM to 3:30 PM</td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                </tr>
-                <tr>
-                    <td class="time">3:30 PM to 5:00 PM</td>
-                    <td></td>
-                    <td class="mn">MN cour Amphie4</td>
-                    <td class="mn">MN tp labo5</td>
-                    <td class="asd">ASD tp</td>
-                    <td></td>
-                </tr>
-            </tbody>
-        </table>
+
+        <div class="card">
+            <h2>Saturday</h2>
+            <div class="inputs" style="display: none;">
+                <input type="text" placeholder="Time">
+                <input type="text" placeholder="Subject">
+                <input type="text" placeholder="Group">
+                <button class="save">Save</button>
+            </div>
+            <button class="add">Add</button>
+        </div>
+
+        <div class="card">
+            <h2>Sunday</h2>
+            <div class="inputs" style="display: none;">
+                <input type="text" placeholder="Time">
+                <input type="text" placeholder="Subject">
+                <input type="text" placeholder="Group">
+                <button class="save">Save</button>
+            </div>
+            <button class="add">Add</button>
+        </div>
+
+        <div class="card">
+            <h2>Monday</h2>
+            <div class="inputs" style="display: none;">
+                <input type="text" placeholder="Time">
+                <input type="text" placeholder="Subject">
+                <input type="text" placeholder="Group">
+                <button class="save">Save</button>
+            </div>
+            <button class="add">Add</button>
+        </div>
+
+        <div class="card">
+            <h2>Tuesday</h2>
+            <div class="inputs" style="display: none;">
+                <input type="text" placeholder="Time">
+                <input type="text" placeholder="Subject">
+                <input type="text" placeholder="Group">
+                <button class="save">Save</button>
+            </div>
+            <button class="add">Add</button>
+        </div>
+
+        <div class="card">
+            <h2>Wednesday</h2>
+            <div class="inputs" style="display: none;">
+                <input type="text" placeholder="Time">
+                <input type="text" placeholder="Subject">
+                <input type="text" placeholder="Group">
+                <button class="save">Save</button>
+            </div>
+            <button class="add">Add</button>
+        </div>
+
+        <div class="card">
+            <h2>Thursday</h2>
+            <div class="inputs" style="display: none;">
+                <input type="text" placeholder="Time">
+                <input type="text" placeholder="Subject">
+                <input type="text" placeholder="Group">
+                <button class="save">Save</button>
+            </div>
+            <button class="add">Add</button>
+        </div>
+
+        <div class="card">
+            <h2>Friday</h2>
+            <div class="inputs" style="display: none;">
+                <input type="text" placeholder="Time">
+                <input type="text" placeholder="Subject">
+                <input type="text" placeholder="Group">
+                <button class="save">Save</button>
+            </div>
+            <button class="add">Add</button>
+        </div>
+        <button id="downloadPdf">
+            Download as PDF
+        </button>
     </main>
+
 </body>
 </html>
