--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
             <div class="inputs" style="display: none;">
                 <input type="text" placeholder="Time">
                 <input type="text" placeholder="Subject">
-                <input type="text" placeholder="Group">
+                <input type="text" placeholder="Sale">
                 <button class="save">Save</button>
             </div>
             <button class="add">Add</button>
@@ -34,7 +34,7 @@
             <div class="inputs" style="display: none;">
                 <input type="text" placeholder="Time">
                 <input type="text" placeholder="Subject">
-                <input type="text" placeholder="Group">
+                <input type="text" placeholder="Sale">
                 <button class="save">Save</button>
             </div>
             <button class="add">Add</button>
@@ -45,7 +45,7 @@
             <div class="inputs" style="display: none;">
                 <input type="text" placeholder="Time">
                 <input type="text" placeholder="Subject">
-                <input type="text" placeholder="Group">
+                <input type="text" placeholder="Sale">
                 <button class="save">Save</button>
             </div>
             <button class="add">Add</button>
@@ -56,7 +56,7 @@
             <div class="inputs" style="display: none;">
                 <input type="text" placeholder="Time">
                 <input type="text" placeholder="Subject">
-                <input type="text" placeholder="Group">
+                <input type="text" placeholder="Sale">
                 <button class="save">Save</button>
             </div>
             <button class="add">Add</button>
@@ -67,7 +67,7 @@
             <div class="inputs" style="display: none;">
                 <input type="text" placeholder="Time">
                 <input type="text" placeholder="Subject">
-                <input type="text" placeholder="Group">
+                <input type="text" placeholder="Sale">
                 <button class="save">Save</button>
             </div>
             <button class="add">Add</button>
@@ -78,7 +78,7 @@
             <div class="inputs" style="display: none;">
                 <input type="text" placeholder="Time">
                 <input type="text" placeholder="Subject">
-                <input type="text" placeholder="Group">
+                <input type="text" placeholder="Sale">
                 <button class="save">Save</button>
             </div>
             <button class="add">Add</button>
@@ -89,7 +89,7 @@
             <div class="inputs" style="display: none;">
                 <input type="text" placeholder="Time">
                 <input type="text" placeholder="Subject">
-                <input type="text" placeholder="Group">
+                <input type="text" placeholder="Sale">
                 <button class="save">Save</button>
             </div>
             <button class="add">Add</button>
@@ -101,3 +101,4 @@
 
 </body>
 </html>
+
